tests/errors/lnk_unresolved_symbol.ail
-- Test IMP010: Symbol not exported error
module tests/errors/lnk_unresolved_symbol

import examples/v3_3/math/gcd (notThere)

-- This import should fail with IMP010
-- The symbol notThere is not exported from math/gcd
-- Available exports: gcd, lcm